# Aquila

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  app.rc  output.txt  tok.txt
App/: CMakeLists.txt
App/Include/: Application.h  EditorLayer.h  Icon.h  UI.h  lucide.h
App/Include/Events/: Event.h  EventBus.h  EventDispatcher.h  EventRegistry.h
App/Include/UIManagement/: UI.h
App/Include/UIManagement/Elements/: ContentBrowserElement.h  HierarchyElement.h  IElement.h  MenubarElement.h  PropertiesElement.h  ViewportElement.h
App/Include/UIManagement/UIComponents/: UIComponent.h
App/Source/: Application.cpp  Aquila.cpp  EditorLayer.cpp  EventDispatcher..cpp  Icon.cpp  UI.cpp
App/Source/UIManagement/: UI.cpp
App/Source/UIManagement/Elements/: ContentBrowserElement.cpp  HierarchyElement.cpp  MenubarElement.cpp  PropertiesElement.cpp  ViewportElement.cpp
Core/: CMakeLists.txt
Core/Include/: AquilaCore.h  AquilaPCH.h  Asserts.h  Common.h  Defines.h
Core/Include/ECS/: Entity.h  Scene.h  SceneContext.h
Core/Include/ECS/Components/: Components.h
Core/Include/Engine/: Buffer.h  Camera.h  CommandBuffer.h  Controller.h  Core.h  Descriptor.h  DescriptorAllocator.h  Device.h  EditorCamera.h  EngineCore.h  Framebuffer.h  Mesh.h  Model.h  ObjectManager.h  OffscreenRenderer.h  OnscreenRenderer.h  Pipeline.h  Primitives.h  RenderManager.h  Renderer.h  Renderpass.h  RenderpassManager.h  Rendertarget.h  SemaphoreManager.h  Shader.h  Swapchain.h  SynchronizationManager.h  Texture2D.h  Vertex.h  Window.h
Core/Include/Engine/Events/: Event.h  EventBus.h  EventRegistry.h
Core/Include/Engine/Geometry/: Ray.h
Core/Include/Engine/Renderer/: Buffer.h  CommandBuffer.h  CommandBufferPool.h  Descriptor.h  Device.h  Framebuffer.h  Pipeline.h  Renderer.h  Renderpass.h  Rendertarget.h  Shader.h  ShaderProgram.h  Swapchain.h  Texture2D.h  Vertex.h
Core/Include/Platform/: DebugLog.h  Platform.h  PrimitiveTypes.h  Timer.h
Core/Include/Platform/Filesystem/: Filesystem.h  IFileSystem.h  NativeFileSystem.h  VirtualFileSystem.h
Core/Include/Platform/Threading/: Threading.h
Core/Include/RenderingSystems/: BRDFLutRenderingSystem.h  CompositeRenderingSystem.h  CubemapRenderingSystem.h  DepthRenderingSystem.h  EnvToCubemapRenderingSystem.h  GizmoRenderingSystem.h  GridRenderingSystem.h  IrradianceRenderingSystem.h  PPRenderingSystem.h  PreethamSkyRenderingSystem.h  PrefilterRenderingSystem.h  RenderingSystemBase.h  SceneRenderingSystem.h  SceneRenderingSystem_new.h
Core/Include/Renderpasses/: CompositePass.h  GeometryPass.h  HDRPrefilterPass.h  HDRiToCubemapPass.h  IrradianceSamplingPass.h  LUTPass.h  PreethamSkyPass.h  ShadowPass.h
Core/Include/Scene/: Entity.h  EntityManager.h  Scene.h  SceneGraph.h  SceneManager.h
Core/Include/Scene/Components/: CameraComponent.h  LightComponent.h  MaterialComponent.h  MeshComponent.h  MetadataComponent.h  SceneNodeComponent.h  TransformComponent.h
Core/Include/Utilities/: Log.h  Math.h  Singleton.h  Timer.h  UUID.h
Core/Source/: AquilaPCH.cpp
Core/Source/ECS/: Scene.cpp  SceneContext.cpp
Core/Source/Engine/: Buffer.cpp  Camera.cpp  CommandBuffer.cpp  Controller.cpp  Core.cpp  Descriptor.cpp  DescriptorAllocator.cpp  Device.cpp  EditorCamera.cpp  EngineCore.cpp  Framebuffer.cpp  Mesh.cpp  Model.cpp  ObjectManager.cpp  OffscreenRenderer.cpp  OnscreenRenderer.cpp  Pipeline.cpp  Primitives.cpp  RenderManger.cpp  Renderer.cpp  Renderpass.cpp  RenderpassManager.cpp  SemaphoreManager.cpp  Shader.cpp  Swapchain.cpp  SynchronizationManager.cpp  Texture2D.cpp  Window.cpp
Core/Source/Engine/Events/: EventRegistry.cpp
Core/Source/Engine/Renderer/: Buffer.cpp  CommandBuffer.cpp  CommandBufferPool.cpp  Descriptor.cpp  DescriptorAllocator.cpp  Device.cpp  Framebuffer.cpp  Pipeline.cpp  (+5 more)
Core/Source/Platform/: DebugLog.cpp  Platform.cpp
Core/Source/RenderingSystems/: BRDFLutRenderingSystem.cpp  CompositeRenderingSystem.cpp  CubemapRenderingSystem.cpp  DepthRenderingSystem.cpp  EnvToCubemapRenderingSystem.cpp  GizmoRenderingSystem.cpp  GridRenderingSystem.cpp  IrradianceRenderingSystem.cpp  PPRenderingSystem.cpp  PreethamSkyRenderingSystem.cpp  PrefilterRenderingSystem.cpp  RenderingSystemBase.cpp  SceneRenderingSystem.cpp  SceneRenderingSystem_new.cpp
Core/Source/Renderpasses/: CompositePass.cpp  GeometryPass.cpp  HDRPrefilterPass.cpp  HDRiToCubemapPass.cpp  IrradianceSamplingPass.cpp  LUTPass.cpp  PreethamSkyPass.cpp  ShadowPass.cpp
Core/Source/Scene/: EnityManager.cpp  Entity.cpp  Scene.cpp  SceneGraph.cpp  SceneManager.cpp
Core/Source/Utilities/: Log.cpp
Editor/: CMakeLists.txt
Editor/Include/: EditorLayer.h  lucide.h
Editor/Include/Core/: EditorApplication.h  EditorConfig.h  EditorLayer.h
Editor/Include/UI/: EditorDockLayout.h  FontManager.h  ImGuiUtils.h  ThemeManager.h  UI.h  UIConfig.h
Editor/Source/: EditorLayer.cpp  main.cpp
Editor/Source/Core/: EditorApplication.cpp  EditorConfig.cpp  EditorLayer.cpp
Editor/Source/UI/: EditorDockLayout.cpp  FontManager.cpp  ThemeManager.cpp  UI.cpp
Engine/: CMakeLists.txt  main.cpp
Engine/Include/: AquilaPCH.h  BasePCH.h  GameplayPCH.h  GraphicsPCH.h  VendorPCH.h  VulkanPCH.h
Engine/Shaders/: Basic.slang  Blit.slang  ClusterCompute.slang  Composite.slang  DepthOnly.slang  FrameData.slang  GBuffer.slang  Gizmo.slang  LightCullCompute.slang  PBR.slang  ProceduralTriangle.slang  Shadows.slang  Skybox.slang  Unlit.slang  Utils.slang  Wave.slang
Engine/Shaders/2D/: Flat2D.slang  GUI2D.slang  Shadow2D.slang  Sprite2D.slang  Text2D.slang
Engine/Shaders/Utility/: ClusterData.slang  ClusterTypes.slang  EnvironmentData.slang  FrameData.slang  LightData.slang  SurfaceData.slang
Engine/Source/: Aquila.code-workspace  GraphicsPCH.cpp
Engine/Tests/: CMakeLists.txt
Engine/Tests/Application/: CMakeLists.txt  InputTesting.cpp  RenderPassSandbox.cpp
Engine/Tests/Foundation/: CMakeLists.txt  FoundationTests.cpp
Engine/Tests/Platform/: CMakeLists.txt  PlatformTests.cpp
Engine/Tests/RHI/: CMakeLists.txt  RHITests.cpp
(+532 files in other folders)
